updated cmake names

--- a/07_recordVideoFromSessionFile_cpp/CMakeLists.txt
+++ b/07_recordVideoFromSessionFile_cpp/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.20.0)
-project(Example_07)
+project(07_recordVideoFromSessionFile_cpp)
 list(APPEND CMAKE_MODULE_PATH
   "${CMAKE_CURRENT_LIST_DIR}/../cuvis.cpp/")
 find_package(CuvisCpp 3.2 REQUIRED)
-add_executable(Example_07 main.cpp)
-target_link_libraries(Example_07 PRIVATE cuvis::cpp)
+add_executable(07_recordVideoFromSessionFile_cpp main.cpp)
+target_link_libraries(07_recordVideoFromSessionFile_cpp PRIVATE cuvis::cpp)
