--- a/03_exportMeasurement_cpp/CMakeLists.txt
+++ b/03_exportMeasurement_cpp/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.20.0)
-project(Example_03)
+project(03_exportMeasurement_cpp)
 list(APPEND CMAKE_MODULE_PATH
   "${CMAKE_CURRENT_LIST_DIR}/../cuvis.cpp/")
 find_package(CuvisCpp 3.2 REQUIRED)
-add_executable(Example_03 main.cpp)
-target_link_libraries(Example_03 PRIVATE cuvis::cpp)
+add_executable(03_exportMeasurement_cpp main.cpp)
+target_link_libraries(03_exportMeasurement_cpp PRIVATE cuvis::cpp)
