--- a/05_recordSingleImages_cpp/CMakeLists.txt
+++ b/05_recordSingleImages_cpp/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.20.0)
-project(Example_05)
+project(05_recordSingleImages_cpp)
 list(APPEND CMAKE_MODULE_PATH
   "${CMAKE_CURRENT_LIST_DIR}/../cuvis.cpp/")
 find_package(CuvisCpp 3.2 REQUIRED)
-add_executable(Example_05 main.cpp)
-target_link_libraries(Example_05 PRIVATE cuvis::cpp)
+add_executable(05_recordSingleImages_cpp main.cpp)
+target_link_libraries(05_recordSingleImages_cpp PRIVATE cuvis::cpp)
