--- a/07_recordVideoFromSessionFile_cpp/CMakeLists.txt
+++ b/07_recordVideoFromSessionFile_cpp/CMakeLists.txt
@@ -2,8 +2,14 @@ cmake_minimum_required(VERSION 3.16.0)
 project(07_recordVideoFromSessionFile_cpp)
 list(APPEND CMAKE_MODULE_PATH
   "${CMAKE_CURRENT_LIST_DIR}/../cuvis.cpp/")
-set(THREADS_PREFER_PTHREAD_FLAG ON)
-find_package(Threads REQUIRED)
 find_package(CuvisCpp 3.2 REQUIRED)
+if (UNIX)
+	set(THREADS_PREFER_PTHREAD_FLAG ON)
+	find_package(Threads REQUIRED)
+endif()
 add_executable(07_recordVideoFromSessionFile_cpp main.cpp)
-target_link_libraries(07_recordVideoFromSessionFile_cpp PRIVATE cuvis::cpp Threads::Threads)
+target_link_libraries(07_recordVideoFromSessionFile_cpp PRIVATE cuvis::cpp)
+
+if (UNIX)
+	target_link_libraries(07_recordVideoFromSessionFile_cpp PRIVATE Threads::Threads)
+endif()
